web-infras/parser/tests/fixtures/babel/typescript/type-arguments/new-without-arguments-missing-semicolon/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,10)
1|new A<T> if (0);
 |        ^
